fixed spacing GitHub and LinkedIn for mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -156,11 +156,12 @@ div#links {
     position: absolute;
     display: flex;
     flex-direction: row;
+    right: 20px;
 }
 
   img {
     width: 40px;
     height: 40px;
     z-index: 137;
-    padding: 20px;
+    padding: 10px;
   }
